--- a/maven_ssm/src/main/resources/properties/resources.properties
+++ b/maven_ssm/src/main/resources/properties/resources.properties
@@ -1,7 +1,7 @@
 db.driverClassName=com.mysql.jdbc.Driver
-db.url=jdbc:mysql://localhost/xiaody?useUnicode=true&characterEncoding=utf-8
-db.userName=root	
-db.password=
+db.url=jdbc:mysql://localhost/shopping?useUnicode=true
+db.username=root	
+db.password=root
 
 redis.enabled=true
 redis.host=192.168.191.136
