--- a/maven_ssm/src/main/resources/properties/resources.properties
+++ b/maven_ssm/src/main/resources/properties/resources.properties
@@ -1,9 +1,9 @@
 db.driverClassName=com.mysql.jdbc.Driver
 db.url=jdbc:mysql://localhost/shopping?useUnicode=true
-db.username=root	
-db.password=
+db.username=root
+db.password=root
 
 redis.enabled=true
 redis.host=192.168.191.136
 redis.port=6379
-redis.password=
+redis.password=xiao
