--- a/maven_ssm/pom.xml
+++ b/maven_ssm/pom.xml
@@ -140,6 +140,11 @@
 			<artifactId>spring-data-redis</artifactId>
 			<version>1.7.2.RELEASE</version>
 		</dependency>
+		<dependency>
+            <groupId>net.sf.ehcache</groupId>
+            <artifactId>ehcache</artifactId>
+            <version>2.10.0</version>
+        </dependency>
 
 		<!-- javaee-api包 注意和项目使用的JDK版本对应 -->
 		<dependency>
