--- a/maven_ssm/src/main/resources/properties/resources.properties
+++ b/maven_ssm/src/main/resources/properties/resources.properties
@@ -1,5 +1,5 @@
 db.driverClassName=com.mysql.jdbc.Driver
-db.url=jdbc:mysql://localhost/shopping?useUnicode=true
+db.url=jdbc:mysql://localhost/shopping?useUnicode=true&characterEncoding=UTF-8
 db.username=root
 db.password=root
 
