--- a/maven_ssm/pom.xml
+++ b/maven_ssm/pom.xml
@@ -172,6 +172,16 @@
 			<artifactId>ehcache</artifactId>
 			<version>2.10.0</version>
 		</dependency>
+		<dependency>
+			<groupId>com.esotericsoftware.kryo</groupId>
+			<artifactId>kryo</artifactId>
+			<version>2.24.0</version>
+		</dependency>
+		<dependency>
+            <groupId>uk.com.robust-it</groupId>
+            <artifactId>cloning</artifactId>
+            <version>1.9.1</version>
+        </dependency>
 
 		<!-- javaee-api包 注意和项目使用的JDK版本对应 -->
 		<dependency>
