--- a/maven_ssm/pom.xml
+++ b/maven_ssm/pom.xml
@@ -182,6 +182,11 @@
             <artifactId>cloning</artifactId>
             <version>1.9.1</version>
         </dependency>
+        <dependency>
+            <artifactId>httpclient</artifactId>
+            <groupId>org.apache.httpcomponents</groupId>
+            <version>4.5.2</version>
+        </dependency>
 
 		<!-- javaee-api包 注意和项目使用的JDK版本对应 -->
 		<dependency>
