--- a/maven_ssm/pom.xml
+++ b/maven_ssm/pom.xml
@@ -187,6 +187,11 @@
             <groupId>org.apache.httpcomponents</groupId>
             <version>4.5.2</version>
         </dependency>
+        <dependency>
+            <groupId>org.apdplat</groupId>
+            <artifactId>word</artifactId>
+            <version>1.2</version>
+        </dependency>
 
 		<!-- javaee-api包 注意和项目使用的JDK版本对应 -->
 		<dependency>
