--- a/maven_ssm/pom.xml
+++ b/maven_ssm/pom.xml
@@ -235,6 +235,17 @@
 			<artifactId>commons-fileupload</artifactId>
 			<version>1.3.1</version>
 		</dependency>
+		<dependency>
+            <groupId>org.springframework.amqp</groupId>
+            <artifactId>spring-rabbit</artifactId>
+            <version>1.5.5.RELEASE</version>
+            <exclusions>
+                <exclusion>
+                    <artifactId>http-client</artifactId>
+                    <groupId>com.rabbitmq</groupId>
+                </exclusion>
+            </exclusions>
+        </dependency>
 
 	</dependencies>
 </project>
