--- a/maven_ssm/src/main/resources/properties/resources.properties
+++ b/maven_ssm/src/main/resources/properties/resources.properties
@@ -7,3 +7,12 @@ redis.enabled=true
 redis.host=192.168.67.132
 redis.port=6379
 redis.password=xiao
+
+
+rabbitmq.username=xiaody
+rabbitmq.password=xiao
+rabbitmq.host=localhost
+rabbitmq.port=5672
+rabbitmq.v_host=/
+rabbitmq.channelCacheSize=10
+rabbitmq.enabled=true
