--- a/maven_ssm/pom.xml
+++ b/maven_ssm/pom.xml
@@ -236,16 +236,31 @@
 			<version>1.3.1</version>
 		</dependency>
 		<dependency>
-            <groupId>org.springframework.amqp</groupId>
-            <artifactId>spring-rabbit</artifactId>
-            <version>1.5.5.RELEASE</version>
-            <exclusions>
-                <exclusion>
-                    <artifactId>http-client</artifactId>
-                    <groupId>com.rabbitmq</groupId>
-                </exclusion>
-            </exclusions>
-        </dependency>
+			<groupId>org.springframework.amqp</groupId>
+			<artifactId>spring-rabbit</artifactId>
+			<version>1.5.5.RELEASE</version>
+			<exclusions>
+				<exclusion>
+					<artifactId>http-client</artifactId>
+					<groupId>com.rabbitmq</groupId>
+				</exclusion>
+			</exclusions>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework.data</groupId>
+			<artifactId>spring-data-mongodb</artifactId>
+			<version>1.8.0.RELEASE</version>
+		</dependency>
+		<dependency>
+			<groupId>org.mongodb</groupId>
+			<artifactId>mongo-java-driver</artifactId>
+			<version>3.2.2</version>
+		</dependency>
+		<dependency>
+			<groupId>org.hibernate</groupId>
+			<artifactId>hibernate-validator</artifactId>
+			<version>5.2.4.Final</version>
+		</dependency>
 
 	</dependencies>
 </project>
