--- a/spring-boot-demo/src/main/resources/properties/resources.properties
+++ b/spring-boot-demo/src/main/resources/properties/resources.properties
@@ -1,5 +1,5 @@
 db.driverClassName=com.mysql.jdbc.Driver
-db.url=jdbc:mysql://localhost/shopping?useUnicode=true&characterEncoding=UTF-8
+db.url=jdbc:mysql://localhost/awesome?useUnicode=true&characterEncoding=UTF-8&useSSL=true
 db.username=root
 db.password=root
 
@@ -20,3 +20,13 @@ rabbitmq.enabled=true
 
 mongo.host=192.168.191.136
 mongo.port=27017
+
+#hibernate config
+hibernate.dialect = org.hibernate.dialect.MySQLDialect
+hibernate.show_sql = true
+hibernate.format_sql = true
+hibernate.hbm2ddl.auto = update
+hibernate.cache.use_second_level_cache = false
+hibernate.cache.use_query_cache = false
+hibernate.cache.region.factory_class = org.hibernate.cache.ehcache.EhCacheRegionFactory
+hibernate.cache.provider_configuration_file_resource_path = ehcache.xml
