--- a/spring-boot-demo/src/main/resources/properties/resources.properties
+++ b/spring-boot-demo/src/main/resources/properties/resources.properties
@@ -30,3 +30,8 @@ hibernate.cache.use_second_level_cache = false
 hibernate.cache.use_query_cache = false
 hibernate.cache.region.factory_class = org.hibernate.cache.ehcache.EhCacheRegionFactory
 hibernate.cache.provider_configuration_file_resource_path = ehcache.xml
+
+
+
+
+server.port=9090
