--- a/maven_ssm/pom.xml
+++ b/maven_ssm/pom.xml
@@ -261,6 +261,12 @@
 			<artifactId>hibernate-validator</artifactId>
 			<version>5.2.4.Final</version>
 		</dependency>
+		<dependency>
+			<groupId>org.apache.kafka</groupId>
+			<artifactId>kafka-clients</artifactId>
+			<version>0.10.0.1</version>
+		</dependency>
+
 
 	</dependencies>
 </project>
