--- a/maven_ssm/src/main/resources/properties/resources.properties
+++ b/maven_ssm/src/main/resources/properties/resources.properties
@@ -4,7 +4,7 @@ db.username=root
 db.password=root
 
 redis.enabled=true
-redis.host=192.168.67.132
+redis.host=192.168.191.136
 redis.port=6379
 redis.password=xiao
 
@@ -20,3 +20,8 @@ rabbitmq.enabled=true
 
 mongo.host=192.168.191.136
 mongo.port=27017
+
+token.expireTime=600
+
+
+kafka.bootstrap.servers=192.168.191.136:9092
