--- a/maven_ssm/src/main/webapp/WEB-INF/web.xml
+++ b/maven_ssm/src/main/webapp/WEB-INF/web.xml
@@ -55,5 +55,19 @@
 		<filter-name>encodingFilter</filter-name>
 		<url-pattern>/*</url-pattern>
 	</filter-mapping>
+	
+	<!--  <filter>
+        <filter-name>tokenFilter</filter-name>
+        <filter-class>org.springframework.web.filter.DelegatingFilterProxy</filter-class>
+        <init-param>
+            <param-name>targetFilterLifecycle</param-name>
+            <param-value>true</param-value>
+        </init-param>
+    </filter>
+
+    <filter-mapping>
+        <filter-name>tokenFilter</filter-name>
+        <url-pattern>/*</url-pattern>
+    </filter-mapping> -->
 
 </web-app>
