--- a/code/liquibase/src/main/resources/liquibase.properties
+++ b/code/liquibase/src/main/resources/liquibase.properties
@@ -1,5 +1,5 @@
 changeLogFile: liquibase/db.changelog-master.xml
 driver: com.mysql.jdbc.Driver
-url: jdbc:mysql://localhost/blog?useUnicode=true
+url: jdbc:mysql://localhost/blog?useUnicode=true&characterEncoding=UTF-8&useSSL=true
 username: root
 password: root
