--- a/code/liquibase/src/main/filters/dev/dev-db.properties
+++ b/code/liquibase/src/main/filters/dev/dev-db.properties
@@ -1,4 +1,4 @@
 db.driver=com.mysql.jdbc.Driver
-db.url=jdbc:mysql://localhost/blog?useUnicode=true
+db.url=jdbc:mysql://localhost/blog?useUnicode=true&characterEncoding=UTF-8&useSSL=true
 db.username=root
 db.password=root
