--- a/maven_ssm/pom.xml
+++ b/maven_ssm/pom.xml
@@ -9,12 +9,12 @@
 
     <properties>
         <!-- spring版本号 -->
-        <spring.version>4.1.0.RELEASE</spring.version>
+        <spring.version>4.3.2.RELEASE</spring.version>
         <!-- log4j日志文件管理包版本 -->
         <slf4j.version>1.7.6</slf4j.version>
         <log4j.version>1.2.17</log4j.version>
         <!-- junit版本号 -->
-        <junit.version>4.10</junit.version>
+        <junit.version>4.12</junit.version>
         <!-- mybatis版本号 -->
         <mybatis.version>3.2.7</mybatis.version>
     </properties>
@@ -165,7 +165,13 @@
         <dependency>
             <groupId>org.springframework.data</groupId>
             <artifactId>spring-data-redis</artifactId>
-            <version>1.7.6.RELEASE</version>
+            <version>1.7.2.RELEASE</version>
+            <exclusions>
+                <exclusion>
+                    <groupId>org.springframework</groupId>
+                    <artifactId>spring-core</artifactId>
+                </exclusion>
+            </exclusions>
         </dependency>
         <dependency>
             <groupId>net.sf.ehcache</groupId>
