--- a/maven_ssm/src/main/resources/properties/resources.properties
+++ b/maven_ssm/src/main/resources/properties/resources.properties
@@ -4,7 +4,7 @@ db.username=root
 db.password=root
 
 redis.enabled=true
-redis.host=localhost
+redis.host=192.168.191.140
 redis.port=6379
 redis.password=xiao
 
