--- a/maven_ssm/pom.xml
+++ b/maven_ssm/pom.xml
@@ -9,7 +9,7 @@
 
     <properties>
         <!-- spring版本号 -->
-        <spring.version>4.3.2.RELEASE</spring.version>
+        <spring.version>4.3.3.RELEASE</spring.version>
         <!-- log4j日志文件管理包版本 -->
         <slf4j.version>1.7.6</slf4j.version>
         <log4j.version>1.2.17</log4j.version>
@@ -17,6 +17,24 @@
         <junit.version>4.12</junit.version>
         <!-- mybatis版本号 -->
         <mybatis.version>3.2.7</mybatis.version>
+        <mybatis.spring.version>1.3.0</mybatis.spring.version>
+        <mysql.version>6.0.5</mysql.version>
+        <redis.version>2.9.0</redis.version>
+        <spring.data.redis.version>1.7.6.RELEASE</spring.data.redis.version>
+        <fastjson.version>1.2.23</fastjson.version>
+        <jackson.version>2.8.5</jackson.version>
+        <jackson-core-asl.version>1.9.13</jackson-core-asl.version>
+        <quartz.version>2.2.3</quartz.version>
+        <spring.data.mongodb.version>1.9.6.RELEASE</spring.data.mongodb.version>
+        <mongodb.version>3.4.1</mongodb.version>
+        <hibernate-validator.version>5.3.4.Final</hibernate-validator.version>
+        <kafka.version>0.10.1.1</kafka.version>
+        <spring.rabbit.version>1.6.6.RELEASE</spring.rabbit.version>
+        <commons-fileupload.version>1.3.2</commons-fileupload.version>
+        <commons-io.version>2.5</commons-io.version>
+        <standard.version>1.1.2</standard.version>
+        <ehcache.version>2.10.3</ehcache.version>
+        <kryo.version>2.24.0</kryo.version>
     </properties>
 
     <dependencies>
@@ -24,28 +42,28 @@
         <dependency>
             <groupId>com.alibaba</groupId>
             <artifactId>fastjson</artifactId>
-            <version>1.2.9</version>
+            <version>${fastjson.version}</version>
         </dependency>
         <!-- Jackson -->
         <dependency>
             <groupId>com.fasterxml.jackson.core</groupId>
             <artifactId>jackson-core</artifactId>
-            <version>2.6.7</version>
+            <version>${jackson.version}</version>
         </dependency>
         <dependency>
             <groupId>com.fasterxml.jackson.core</groupId>
             <artifactId>jackson-annotations</artifactId>
-            <version>2.6.7</version>
+            <version>${jackson.version}</version>
         </dependency>
         <dependency>
             <groupId>com.fasterxml.jackson.core</groupId>
             <artifactId>jackson-databind</artifactId>
-            <version>2.6.7</version>
+            <version>${jackson.version}</version>
         </dependency>
         <dependency>
             <groupId>org.codehaus.jackson</groupId>
             <artifactId>jackson-core-asl</artifactId>
-            <version>1.9.13</version>
+            <version>${jackson-core-asl.version}</version>
         </dependency>
         <!-- 添加Spring依赖 -->
         <dependency>
@@ -96,7 +114,7 @@
         <dependency>
             <groupId>org.quartz-scheduler</groupId>
             <artifactId>quartz</artifactId>
-            <version>2.1.3</version>
+            <version>${quartz.version}</version>
         </dependency>
         <!--单元测试依赖 -->
         <dependency>
@@ -130,7 +148,6 @@
             <groupId>org.springframework</groupId>
             <artifactId>spring-test</artifactId>
             <version>${spring.version}</version>
-            <scope>test</scope>
         </dependency>
 
         <!--mybatis依赖 -->
@@ -144,28 +161,26 @@
         <dependency>
             <groupId>org.mybatis</groupId>
             <artifactId>mybatis-spring</artifactId>
-            <version>1.2.2</version>
+            <version>${mybatis.spring.version}</version>
         </dependency>
 
         <!-- mysql驱动包 -->
         <dependency>
             <groupId>mysql</groupId>
             <artifactId>mysql-connector-java</artifactId>
-            <version>5.1.29</version>
+            <version>${mysql.version}</version>
         </dependency>
 
         <dependency>
             <groupId>redis.clients</groupId>
             <artifactId>jedis</artifactId>
-            <version>2.8.1</version>
-            <type>jar</type>
-            <scope>compile</scope>
+            <version>${redis.version}</version>
         </dependency>
 
         <dependency>
             <groupId>org.springframework.data</groupId>
             <artifactId>spring-data-redis</artifactId>
-            <version>1.7.2.RELEASE</version>
+            <version>${spring.data.redis.version}</version>
             <exclusions>
                 <exclusion>
                     <groupId>org.springframework</groupId>
@@ -176,17 +191,17 @@
         <dependency>
             <groupId>net.sf.ehcache</groupId>
             <artifactId>ehcache</artifactId>
-            <version>2.10.0</version>
+            <version>${ehcache.version}</version>
         </dependency>
         <dependency>
             <groupId>com.esotericsoftware.kryo</groupId>
             <artifactId>kryo</artifactId>
-            <version>2.24.0</version>
+            <version>${kryo.version}</version>
         </dependency>
         <dependency>
             <groupId>uk.com.robust-it</groupId>
             <artifactId>cloning</artifactId>
-            <version>1.9.1</version>
+            <version>1.9.3</version>
         </dependency>
         <dependency>
             <artifactId>httpclient</artifactId>
@@ -224,27 +239,22 @@
         <dependency>
             <groupId>taglibs</groupId>
             <artifactId>standard</artifactId>
-            <version>1.1.2</version>
+            <version>${standard.version}</version>
         </dependency>
         <dependency>
             <groupId>commons-io</groupId>
             <artifactId>commons-io</artifactId>
-            <version>2.2</version>
+            <version>${commons-io.version}</version>
         </dependency>
         <dependency>
             <groupId>commons-fileupload</groupId>
             <artifactId>commons-fileupload</artifactId>
-            <version>2.2</version>
-        </dependency>
-        <dependency>
-            <groupId>commons-fileupload</groupId>
-            <artifactId>commons-fileupload</artifactId>
-            <version>1.3.1</version>
+            <version>${commons-fileupload.version}</version>
         </dependency>
         <dependency>
             <groupId>org.springframework.amqp</groupId>
             <artifactId>spring-rabbit</artifactId>
-            <version>1.5.5.RELEASE</version>
+            <version>${spring.rabbit.version}</version>
             <exclusions>
                 <exclusion>
                     <artifactId>http-client</artifactId>
@@ -255,22 +265,22 @@
         <dependency>
             <groupId>org.springframework.data</groupId>
             <artifactId>spring-data-mongodb</artifactId>
-            <version>1.8.0.RELEASE</version>
+            <version>${spring.data.mongodb.version}</version>
         </dependency>
         <dependency>
             <groupId>org.mongodb</groupId>
             <artifactId>mongo-java-driver</artifactId>
-            <version>3.2.2</version>
+            <version>${mongodb.version}</version>
         </dependency>
         <dependency>
             <groupId>org.hibernate</groupId>
             <artifactId>hibernate-validator</artifactId>
-            <version>5.2.4.Final</version>
+            <version>${hibernate-validator.version}</version>
         </dependency>
         <dependency>
             <groupId>org.apache.kafka</groupId>
             <artifactId>kafka-clients</artifactId>
-            <version>0.10.0.1</version>
+            <version>${kafka.version}</version>
         </dependency>
 
     </dependencies>
