--- a/maven_ssm/src/main/resources/properties/resources.properties
+++ b/maven_ssm/src/main/resources/properties/resources.properties
@@ -1,14 +1,14 @@
+#db
 db.driverClassName=com.mysql.jdbc.Driver
 db.url=jdbc:mysql://localhost/shopping?useUnicode=true&characterEncoding=UTF-8
 db.username=root
 db.password=root
-
+#redis
 redis.enabled=true
 redis.host=192.168.191.140
 redis.port=6379
 redis.password=xiao
-
-
+#rabbitmq
 rabbitmq.username=xiaody
 rabbitmq.password=xiao
 rabbitmq.host=localhost
@@ -16,12 +16,13 @@ rabbitmq.port=5672
 rabbitmq.v_host=/
 rabbitmq.channelCacheSize=10
 rabbitmq.enabled=true
-
-
+#mongo
 mongo.host=localhost
 mongo.port=27017
-
+#token
 token.expireTime=600
-
-
+#kafka
 kafka.bootstrap.servers=localhost:9092
+#elasticsearch
+elasticsearch.cluster.name=elasticsearch
+elasticsearch.cluster.nodes=127.0.0.1:9300
