--- a/maven_ssm/pom.xml
+++ b/maven_ssm/pom.xml
@@ -8,17 +8,14 @@
     <name>maven_ssm</name>
 
     <properties>
-        <!-- spring版本号 -->
         <spring.version>4.3.3.RELEASE</spring.version>
-        <!-- log4j日志文件管理包版本 -->
         <slf4j.version>1.7.6</slf4j.version>
         <log4j.version>1.2.17</log4j.version>
-        <!-- junit版本号 -->
         <junit.version>4.12</junit.version>
-        <!-- mybatis版本号 -->
         <mybatis.version>3.2.7</mybatis.version>
         <mybatis.spring.version>1.3.0</mybatis.spring.version>
-        <mysql.version>6.0.5</mysql.version>
+        <!--<mysql.version>6.0.5</mysql.version>-->
+        <mysql.version>5.1.39</mysql.version>
         <redis.version>2.9.0</redis.version>
         <spring.data.redis.version>1.7.6.RELEASE</spring.data.redis.version>
         <fastjson.version>1.2.23</fastjson.version>
@@ -26,7 +23,7 @@
         <jackson-core-asl.version>1.9.13</jackson-core-asl.version>
         <quartz.version>2.2.3</quartz.version>
         <spring.data.mongodb.version>1.9.6.RELEASE</spring.data.mongodb.version>
-        <mongodb.version>3.4.1</mongodb.version>
+        <mongodb.version>3.4.0</mongodb.version>
         <hibernate-validator.version>5.3.4.Final</hibernate-validator.version>
         <kafka.version>0.10.1.1</kafka.version>
         <spring.rabbit.version>1.6.6.RELEASE</spring.rabbit.version>
@@ -35,6 +32,8 @@
         <standard.version>1.1.2</standard.version>
         <ehcache.version>2.10.3</ehcache.version>
         <kryo.version>2.24.0</kryo.version>
+        <elasticsearch.version>2.2.0</elasticsearch.version>
+        <spring.elasticsearch.version>2.0.1.RELEASE</spring.elasticsearch.version>
     </properties>
 
     <dependencies>
@@ -44,7 +43,7 @@
             <artifactId>fastjson</artifactId>
             <version>${fastjson.version}</version>
         </dependency>
-        <!-- Jackson -->
+        <!-- Jackson
         <dependency>
             <groupId>com.fasterxml.jackson.core</groupId>
             <artifactId>jackson-core</artifactId>
@@ -64,7 +63,7 @@
             <groupId>org.codehaus.jackson</groupId>
             <artifactId>jackson-core-asl</artifactId>
             <version>${jackson-core-asl.version}</version>
-        </dependency>
+        </dependency>-->
         <!-- 添加Spring依赖 -->
         <dependency>
             <groupId>org.springframework</groupId>
@@ -219,7 +218,6 @@
             <groupId>javax</groupId>
             <artifactId>javaee-api</artifactId>
             <version>7.0</version>
-            <scope>provided</scope>
         </dependency>
 
         <!-- javaee-web-api包 注意和项目使用的JDK版本对应 -->
@@ -227,15 +225,12 @@
             <groupId>javax</groupId>
             <artifactId>javaee-web-api</artifactId>
             <version>7.0</version>
-            <scope>provided</scope>
         </dependency>
-
         <dependency>
             <groupId>javax.servlet</groupId>
             <artifactId>jstl</artifactId>
             <version>1.2</version>
         </dependency>
-
         <dependency>
             <groupId>taglibs</groupId>
             <artifactId>standard</artifactId>
@@ -281,6 +276,18 @@
             <groupId>org.apache.kafka</groupId>
             <artifactId>kafka-clients</artifactId>
             <version>${kafka.version}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.elasticsearch</groupId>
+            <artifactId>elasticsearch</artifactId>
+            <version>${elasticsearch.version}</version>
+        </dependency>
+        <!-- https://mvnrepository.com/artifact/org.springframework.data/spring-data-elasticsearch -->
+        <dependency>
+            <groupId>org.springframework.data</groupId>
+            <artifactId>spring-data-elasticsearch</artifactId>
+            <version>${spring.elasticsearch.version}</version>
         </dependency>
 
     </dependencies>
