--- a/maven_ssm/src/main/resources/properties/resources.properties
+++ b/maven_ssm/src/main/resources/properties/resources.properties
@@ -22,7 +22,7 @@ mongo.port=27017
 #token
 token.expireTime=600
 #kafka
-kafka.bootstrap.servers=localhost:9092
+kafka.bootstrap.servers=192.168.191.140:9092
 #elasticsearch
 elasticsearch.cluster.name=elasticsearch
 elasticsearch.cluster.nodes=127.0.0.1:9300
